<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_background"
>
    <!-- set the drawable resource here -->
    <!-- set the background color here -->

<!-- UI elements for the pop-up window here -->


    <TextView
        android:id="@+id/popup_window_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="146dp"
        android:text="Edit Task"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/task_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:hint="Task Name"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_window_title"
        tools:ignore="Autofill,HardcodedText,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/current_date"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Today's Date"
        android:inputType="date"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@id/due_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_name"
        app:layout_constraintVertical_bias="0.52"
        tools:ignore="Autofill,HardcodedText,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/due_date"
        android:layout_width="213dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Due Date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@id/reminder_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_date"
        tools:ignore="HardcodedText,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/reminder_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Reminder Time"
        android:inputType="time"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/due_date"
        tools:ignore="Autofill,HardcodedText,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/discription_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textLongMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder_time"
        tools:ignore="Autofill,HardcodedText,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/Priority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="priority"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder_time"
        tools:ignore="Autofill,HardcodedText" />

    <Button
    android:id="@+id/cancelButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Cancel"
    app:layout_constraintEnd_toStartOf="@id/update_button"
    app:layout_constraintTop_toTopOf="@id/update_button"
    app:layout_constraintVertical_bias="0.806"
    app:layout_constraintHorizontal_bias="0.5"
    android:layout_marginEnd="16dp"
        tools:ignore="HardcodedText" />

<Button
    android:id="@+id/update_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginEnd="56dp"
    android:text="Update"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/task_name"
    app:layout_constraintVertical_bias="0.806"
    tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>